welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:3: error: too many arguments for method faireMotif: ()Unit
  faireMotif(c:Color)
            ^MethodsPicture:24: error: too many arguments for method faireV: ()Unit
  faireV(c:Color)
        ^MethodsPicture:26: error: value avance is not a member of Unit
  gauche()avance()
          ^